feed page mastering and make post with photo and video

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ node_modules/
 .next/
 # .env
 .DS_Store
-# backend/public/uploads/
+backend/public/uploads/
+backend/node_modules
+frontend/node_modules
