post like count and show posts public and private

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ node_modules/
 # .env
 .DS_Store
 backend/public/uploads/
-backend/node_modules
-frontend/node_modules
+backend/node_modules/
+frontend/node_modules/
